feature(user): edit own profile (MIN-151)